--- a/comparaisons.html
+++ b/comparaisons.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>INDEX</title>
+    <title>Comparisons</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1/12/9/umd/popper.min/js"></script>
@@ -41,24 +42,10 @@
         </div>
     </nav>
 </header>
-
-<!--Main information-->
 <div class = "container">
     <div class = "row">
-        <div class = "col-md-6 col-sm-12" id = "info">
-            <h2>Summary: Latitude vs. X</h2>
-            <img src = "Resources/assets/images/Fig1.png" height = "200" width = "250">
-            <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. 
-                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
-            </p>
-            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
-                Factors we looked at included: temperature, cloudiness, wind speed, and humidity.  
-                This site provides the source data and visualizations created as part of the analysis, 
-                as well as explanations and descriptions of any trends and correlations witnessed.
-            </p>
-        </div>
-        <div class = "col-md-4" id = "visualizations">
-            <h2>Visualizations</h2>
+        <div class = "col-md-12" id = "comp_visuals">
+            <h2>Comparison: Latitude vs. X</h2>
             <div id = "img_box">
                 <a href="https://gdjeudeu.github.io/comparaisons.html"><img src = "Resources/assets/images/Fig1.png" height = "150" width = "150"></a>
                 <a href="https://gdjeudeu.github.io/city_Lat_vs_Humdity.html"><img src = "Resources/assets/images/Fig2.png" height = "150" width = "150"></a>
