--- a/city_lat_vs_cloudiness.html
+++ b/city_lat_vs_cloudiness.html
@@ -33,10 +33,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="comparaisons.html">Comparison</a>
+                <a class="nav-link" href="https://gdjeudeu.github.io/comparaisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="data.html">Data</a>
+                <a class="nav-link" href="https://gdjeudeu.github.io/data.html">Data</a>
             </li>
             </ul>
         </div>
