all .html files updated

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="https://gdjeudeu.github.io/comparaisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://gdjeudeu.github.io/data.html">Data</a>
+                <a class="nav-link" href="https://gdjeudeu.github.io/Data.html">Data</a>
             </li>
             </ul>
         </div>
@@ -60,7 +60,7 @@
         <div class = "col-md-4" id = "visualizations">
             <h2>Visualizations</h2>
             <div id = "img_box">
-                <a href="https://gdjeudeu.github.io/comparaisons.html"><img src = "Resources/assets/images/Fig1.png" height = "150" width = "150"></a>
+                <a href="https://gdjeudeu.github.io/Max_Temperature.html.html"><img src = "Resources/assets/images/Fig1.png" height = "150" width = "150"></a>
                 <a href="https://gdjeudeu.github.io/city_Lat_vs_Humdity.html"><img src = "Resources/assets/images/Fig2.png" height = "150" width = "150"></a>
                 <a href="https://gdjeudeu.github.io/city_lat_vs_cloudiness.html"><img src = "Resources/assets/images/Fig3.png" height = "150" width = "150"></a>
                 <a href="https://gdjeudeu.github.io/City_Lat_VS_Wind_Speed.html"><img src = "Resources/assets/images/Fig4.png" height = "150" width = "150"></a>
