--- a/Data.html
+++ b/Data.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="https://gdjeudeu.github.io/comparaisons.html">Comparison</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="https://gdjeudeu.github.io/data.html">Data</a>
+              <a class="nav-link" href="https://gdjeudeu.github.io/Data.html">Data</a>
           </li>
           </ul>
       </div>
