--- a/comparaisons.html
+++ b/comparaisons.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="https://gdjeudeu.github.io/comparaisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://gdjeudeu.github.io/data.html">Data</a>
+                <a class="nav-link" href="https://gdjeudeu.github.io/Data.html">Data</a>
             </li>
             </ul>
         </div>
@@ -47,7 +47,7 @@
         <div class = "col-md-12" id = "comp_visuals">
             <h2>Comparison: Latitude vs. X</h2>
             <div id = "img_box">
-                <a href="https://gdjeudeu.github.io/comparaisons.html"><img src = "Resources/assets/images/Fig1.png" height = "350" width = "400"></a>
+                <a href="https://gdjeudeu.github.io/Max_Temperature.html.html"><img src = "Resources/assets/images/Fig1.png" height = "350" width = "400"></a>
                 <a href="https://gdjeudeu.github.io/city_Lat_vs_Humdity.html"><img src = "Resources/assets/images/Fig2.png" height = "350" width = "400"></a>
                 <a href="https://gdjeudeu.github.io/city_lat_vs_cloudiness.html"><img src = "Resources/assets/images/Fig3.png" height = "350" width = "400"></a>
                 <a href="https://gdjeudeu.github.io/City_Lat_VS_Wind_Speed.html"><img src = "Resources/assets/images/Fig4.png" height = "350" width = "400"></a>
